syntax = "proto3";

package snippet;

service SnippetService {
  rpc GetSnippets(GetSnippetsRequest) returns (SnippetListResponse);
  rpc GetSnippet(GetSnippetRequest) returns (SnippetResponse);
  rpc CreateSnippet(CreateSnippetRequest) returns (SnippetResponse);
  rpc UpdateSnippet(UpdateSnippetRequest) returns (SnippetResponse);
  rpc DeleteSnippet(DeleteSnippetRequest) returns (OperationResponse);
}

message GetSnippetsRequest {
  string userId = 1;
  int32 page = 2;
  int32 limit = 3;
  string language = 4;
}

message Snippet {
  string id = 1;
  string title = 2;
  string code = 3;
  string language = 4;
  string userId = 5;
  string createdAt = 6;
  string updatedAt = 7;
}

message SnippetListResponse {
  bool success = 1;
  string message = 2;
  repeated Snippet snippets = 3;
  int32 total = 4;
}

message GetSnippetRequest {
  string userId = 1;
  string snippetId = 2;
}

message SnippetResponse {
  bool success = 1;
  string message = 2;
  Snippet snippet = 3;
}

message CreateSnippetRequest {
  string userId = 1;
  string title = 2;
  string code = 3;
  string language = 4;
}

message UpdateSnippetRequest {
  string userId = 1;
  string snippetId = 2;
  string title = 3;
  string code = 4;
  string language = 5;
}

message DeleteSnippetRequest {
  string userId = 1;
  string snippetId = 2;
}

message OperationResponse {
  bool success = 1;
  string message = 2;
}
